<resources>
    <string name="app_name">MyTaxi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NONAME USER</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="action_exit">Выход</string>

    <string name="menu_map">Карта</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_orders">Заказы</string>
    <string name="menu_compl_orders">Выполненные заказы</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Вход</string>
    <string name="action_registr">Регистрация</string>

    <string name="action_sign_in_short">Вход</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Пользователь не найден</string>
    <string name="invalid_password">Пароль должен быть длинне >5 символов</string>
    <string name="login_failed">"Ошибка входа"</string>
    <string name="login_well_done">"Вы вошли!"</string>
    <string name="registration_failed">"Ошибка регистрации"</string>
    <string name="registration_well_done">"Регистрация успешна!"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_button">ButtonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>